--- a/src/app/components/scan-slide/scan-slide.component.html
+++ b/src/app/components/scan-slide/scan-slide.component.html
@@ -1,5 +1,5 @@
 <section>
-  <img src="" alt="assets/scan.jpg" class="hero" />
+  <img src="assets/scan.jpg" alt="" class="hero" />
   <article class="instruction">
     <h1>Scan the QR code</h1>
     <p>To proceed please scan QR coe and follow isntruction.</p>
