--- a/src/styles.css
+++ b/src/styles.css
@@ -3,20 +3,22 @@
   --white-color: #ffffff;
   --black-white: #141414;
   --mustard-color: #c8b400;
+  --orange-color: #d36236;
 }
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
 }
 .btn-primary {
-  background-color: var(--mustard-color);
+  background-color: var(--orange-color);
   color: var(--white-color);
   border: none;
-  padding: 0.5rem 1rem;
+  font-size: 1.1rem;
+  padding: 1rem 1.5rem;
   border-radius: 0.5rem;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 .btn-primary:hover {
-  background-color: #b3a100;
+  background-color: var(--gunmetal-color);
 }
