--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,4 @@
-<p>navbar works!</p>
+<nav>
+  <span class="title">Husqvarna Guest Portal</span>
+  <img src="assets/hsqlogo.png" alt="" class="logo" />
+</nav>
