--- a/src/app/components/scan-slide/scan-slide.component.html
+++ b/src/app/components/scan-slide/scan-slide.component.html
@@ -1,7 +1,10 @@
 <section>
   <img src="assets/scan.jpg" alt="" class="hero" />
   <article class="instruction">
-    <h1>Scan the QR code</h1>
+    <h1>
+      Welcome to<br />
+      Husqvarna Manufacturing
+    </h1>
     <p>To proceed please scan QR coe and follow isntruction.</p>
     <button class="btn-primary">Manual scaning</button>
   </article>
