--- a/src/app/components/scan-slide/scan-slide.component.html
+++ b/src/app/components/scan-slide/scan-slide.component.html
@@ -1,11 +1,11 @@
 <section>
-  <img src="assets/scan.jpg" alt="" class="hero" />
+  <img src="assets/scan.jpg" alt="" class="hero-img" />
   <article class="instruction">
     <h1>
       Welcome to<br />
       Husqvarna Manufacturing
     </h1>
     <p>To proceed please scan QR coe and follow isntruction.</p>
-    <button class="btn-primary">Manual scaning</button>
+    <button class="btn btn-primary">Manual scaning</button>
   </article>
 </section>
