--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,16 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
 }
+.btn {
+  border: none;
+  color: var(--white-color);
+  font-size: 1.1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
 .btn-primary {
   background-color: var(--orange-color);
-  color: var(--white-color);
   border: none;
   font-size: 1.1rem;
   padding: 1rem 1.5rem;
@@ -21,4 +28,60 @@ body {
 }
 .btn-primary:hover {
   background-color: var(--gunmetal-color);
+}
+.btn-accept {
+  width: 45px;
+  height: 45px;
+  background: green;
+  font-size: 1.2rem;
+}
+.btn-decline {
+  width: 45px;
+  height: 45px;
+  background: red;
+  font-size: 1.2rem;
+}
+.hero-img {
+  width: 450px;
+  height: 450px;
+  object-fit: cover;
+  border-radius: 5px 0 0 5px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+input {
+  padding: 0.8rem;
+  font-size: 1rem;
+  border: 1px solid grey;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+}
+.instruction {
+  border-radius: 0 5px 5px 0;
+  background: var(--white-color);
+  width: 450px;
+  height: 450px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+.instruction h1 {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: rgb(233, 233, 233);
+}
+.row {
+  padding: 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
