--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,7 @@ body {
 input {
   padding: 0.8rem;
   font-size: 1rem;
-  border: 1px solid grey;
+  border: 1px solid rgb(211, 209, 209);
   border-radius: 5px;
   margin-bottom: 1rem;
 }
