--- a/src/app/components/scan-slide/scan-slide.component.html
+++ b/src/app/components/scan-slide/scan-slide.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="card">
   <img src="assets/scan.jpg" alt="" class="hero-img" />
   <article class="instruction">
     <h1>
@@ -7,5 +7,7 @@
     </h1>
     <p>To proceed please scan QR coe and follow isntruction.</p>
     <button class="btn btn-primary">Manual scaning</button>
+    <span>Or</span>
+    <a href="">Manual Entry</a>
   </article>
 </section>
