--- a/src/app/components/stepper/stepper.component.html
+++ b/src/app/components/stepper/stepper.component.html
@@ -1,1 +1,7 @@
-<span class="dot"></span><span class="dot"></span><span class="dot"></span>
+<div class="stepper">
+  <span class="dot completed">1</span>
+  <span class="line"></span>
+  <span class="dot">2</span>
+  <span class="line"></span>
+  <span class="dot">3</span>
+</div>
