--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,11 @@ body {
   background: red;
   font-size: 1.2rem;
 }
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .hero-img {
   width: 450px;
   height: 450px;
