--- a/src/app/components/stepper/stepper.component.css
+++ b/src/app/components/stepper/stepper.component.css
@@ -1,6 +1,30 @@
 .dot {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
+  background: var(--white-color);
+  border: 2px solid var(--orange-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+}
+.completed {
+  background: var(--orange-color);
+  color: var(--white-color);
+}
+.stepper {
+  width: 900px;
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.line {
+  flex: 1;
+  height: 2px;
   background: var(--orange-color);
 }
