--- a/src/app/components/visitor-slide/visitor-slide.component.html
+++ b/src/app/components/visitor-slide/visitor-slide.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="card">
   <img src="assets/profile.png" alt="" class="hero-img" />
   <article class="instruction">
     <h1>Visitor Details</h1>
