--- a/src/app/components/scan-slide/scan-slide.component.html
+++ b/src/app/components/scan-slide/scan-slide.component.html
@@ -6,7 +6,9 @@
       Husqvarna Manufacturing
     </h1>
     <p>To proceed please scan QR coe and follow isntruction.</p>
-    <button class="btn btn-primary">Manual scaning</button>
+    <button class="btn btn-primary" (click)="triggerScan()">
+      Manual scaning
+    </button>
     <span>Or</span>
     <a href="">Manual Entry</a>
   </article>
