--- a/src/app/components/visitor-slide/visitor-slide.component.html
+++ b/src/app/components/visitor-slide/visitor-slide.component.html
@@ -6,8 +6,9 @@
     <input type="text" />
     <input type="text" />
     <div class="row">
-      <button class="btn btn-accept"><i class="bi bi-check-lg"></i></button>
-      <button class="btn btn-decline"><i class="bi bi-x-lg"></i></button>
+      <button class="btn btn-primary" (click)="triggerTraining()">
+        Continue
+      </button>
     </div>
   </article>
 </section>
