--- a/src/app/components/stepper/stepper.component.css
+++ b/src/app/components/stepper/stepper.component.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
+  transition: all 0.3s ease;
 }
 .completed {
   background: var(--orange-color);
