--- a/src/app/components/training-slide/training-slide.component.html
+++ b/src/app/components/training-slide/training-slide.component.html
@@ -30,6 +30,6 @@
   </article>
   <article class="instruction">
     <h1>By entering this area, you agree to follow the safety instructions</h1>
-    <button class="btn btn-primary">Agree</button>
+    <button class="btn btn-primary" (click)="createVisit()">Agree</button>
   </article>
 </section>
