--- a/src/app/components/scan-slide/scan-slide.component.html
+++ b/src/app/components/scan-slide/scan-slide.component.html
@@ -5,11 +5,13 @@
       Welcome to<br />
       Husqvarna Manufacturing
     </h1>
-    <p>To proceed please scan QR coe and follow isntruction.</p>
+    <p>
+      To proceed please <b>scan QR code</b> and follow instruction.<br />
+      If code you dont have code or it is not working proceed with Manual
+      Scaning
+    </p>
     <button class="btn btn-primary" (click)="triggerScan()">
       Manual scaning
     </button>
-    <span>Or</span>
-    <a href="">Manual Entry</a>
   </article>
 </section>
