--- a/src/app/pages/visit-page/visit-page.component.html
+++ b/src/app/pages/visit-page/visit-page.component.html
@@ -2,6 +2,7 @@
   <notification
     *ngIf="notifData.notifStatus"
     [notifData]="notifData"
+    @fadeInOut
   ></notification>
   <scan-slide
     *ngIf="slide === 1"
