--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,6 +1,6 @@
 <span class="notification">
   <span class="notif-title"
-    >{{ notifData.notifStatus }} <i class="bi bi-check-circle"></i
+    >{{ notifData.notifStatus }} <i class="{{ notifData.notifIcon }}"></i
   ></span>
   <span class="notif-text">{{ notifData.notifText }}</span>
 </span>
