--- a/src/app/pages/visit-page/visit-page.component.html
+++ b/src/app/pages/visit-page/visit-page.component.html
@@ -13,6 +13,7 @@
   <visitor-slide
     *ngIf="slide === 2"
     (dataExported)="handleExportedData($event)"
+    [visitToSave]="saveVisit"
     @slideInOut
   ></visitor-slide>
   <training-slide
