--- a/src/app/components/visitor-slide/visitor-slide.component.html
+++ b/src/app/components/visitor-slide/visitor-slide.component.html
@@ -2,9 +2,9 @@
   <img src="assets/profile.png" alt="" class="hero-img" />
   <article class="instruction">
     <h1>Visitor Details</h1>
-    <input type="text" />
-    <input type="text" />
-    <input type="text" />
+    <input type="text" [(ngModel)]="visitToSave.name" />
+    <input type="text" [(ngModel)]="visitToSave.host" />
+    <input type="text" [(ngModel)]="visitToSave.visitTime" />
     <div class="row">
       <button class="btn btn-primary" (click)="triggerTraining()">
         Continue
