--- a/src/app/pages/qr-code-generator/qr-code-generator.component.css
+++ b/src/app/pages/qr-code-generator/qr-code-generator.component.css
@@ -1,6 +1,13 @@
 section {
+  padding: 120px 0 160px;
   flex-direction: column;
+  justify-content: flex-start;
   gap: 10px;
+  min-height: 100vh;
+}
+p {
+  width: 350px;
+  color: var(--gray-color);
 }
 .form-group {
   width: 350px;
