--- a/src/app/components/scan-slide/scan-slide.component.html
+++ b/src/app/components/scan-slide/scan-slide.component.html
@@ -1,3 +1,4 @@
+<!--<input style="margin-top: 600px" #hiddenInput type="text" />-->
 <section class="card">
   <img src="assets/scan.jpg" alt="" class="hero-img" />
   <article class="instruction">
@@ -10,8 +11,6 @@
       If code you dont have code or it is not working proceed with Manual
       Scaning
     </p>
-    <button class="btn btn-primary" (click)="triggerScan()">
-      Manual scaning
-    </button>
+    <button class="btn btn-primary" (click)="nextSlide()">Manual Typing</button>
   </article>
 </section>
