--- a/src/app/components/scan-slide/scan-slide.component.html
+++ b/src/app/components/scan-slide/scan-slide.component.html
@@ -1,4 +1,4 @@
-<!--<input style="margin-top: 600px" #hiddenInput type="text" />-->
+<input style="margin-top: 600px" #hiddenInput type="text" />
 <section class="card">
   <img src="assets/scan.jpg" alt="" class="hero-img" />
   <article class="instruction">
