Notif cross component fix

--- a/src/app/pages/visit-page/visit-page.component.html
+++ b/src/app/pages/visit-page/visit-page.component.html
@@ -14,6 +14,7 @@
   <visitor-slide
     *ngIf="slide === 2"
     (dataExported)="handleExportedData($event)"
+    (notifExported)="handleNotifStatus($event)"
     [visitToSave]="saveVisit"
     @slideInOut
   ></visitor-slide>
