--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,12 @@ input {
   border-radius: 5px;
   margin-bottom: 1rem;
 }
+.input-control {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  background: var(--white-color);
+}
 .instruction {
   border-radius: 0 5px 5px 0;
   background: var(--white-color);
