--- a/src/app/pages/visits-overview/visits-overview.component.html
+++ b/src/app/pages/visits-overview/visits-overview.component.html
@@ -39,6 +39,7 @@
     </table>
     <paginator
       style="justify-self: start"
+      [handlePageChange]="handlePageChange.bind(this)"
       [totalPages]="totalPages"
       [currentPage]="filter.page"
     ></paginator>
