--- a/src/app/pages/visits-overview/visits-overview.component.html
+++ b/src/app/pages/visits-overview/visits-overview.component.html
@@ -38,6 +38,7 @@
       </tbody>
     </table>
     <paginator
+      *ngIf="visitsFromDB.length > 0"
       style="justify-self: start"
       [handlePageChange]="handlePageChange.bind(this)"
       [totalPages]="totalPages"
