--- a/src/app/components/training-slide/training-slide.component.html
+++ b/src/app/components/training-slide/training-slide.component.html
@@ -1,35 +1,50 @@
 <section class="card">
   <article class="instruction training-text">
     <span class="title">Safety Instructions</span>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt soluta
-      consequuntur aperiam. Vel, esse. Esse quo quia, labore maiores provident
-      veniam amet in harum dolore debitis. Enim tempore magni qui pariatur nemo,
-      accusamus error tempora iure quisquam natus inventore vero! Nulla, modi.
-      Quaerat quas alias, repellat nihil maiores atque numquam accusamus
-      consequuntur reiciendis amet iure deleniti magnam reprehenderit temporibus
-      delectus repudiandae labore doloribus vel eligendi eos corrupti dolorem.
-      Sint sequi assumenda enim consectetur architecto repellendus ex eos
-      accusamus error iusto? Lorem ipsum dolor sit amet consectetur adipisicing
-      elit. Quis soluta reiciendis maiores ducimus quaerat maxime. Ratione
-      repellendus corrupti incidunt itaque hic reiciendis sequi quod eius
-      explicabo, rem veniam mollitia non consectetur? Incidunt veniam eius enim
-      quasi animi ut. Alias eligendi voluptatibus quidem, doloribus a labore
-      tempore repellat similique sit fugiat! Quisquam, voluptates. Quisquam
-      voluptates, quidem, quas, quos quae quia voluptas doloribus quibusdam.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ex eius
-      nesciunt eos distinctio unde repudiandae quasi omnis, autem accusamus,
-      laborum aperiam ad itaque sint aliquam placeat quo cumque? Provident
-      ducimus, vitae aperiam, esse illo error libero voluptate facere aliquam
-      quidem pariatur unde voluptatum ipsam. Laborum consequuntur voluptates
-      doloremque, facere rem esse, aperiam tenetur, incidunt sint delectus
-      blanditiis odit aliquam vitae harum ad cum ratione neque laudantium modi
-      veniam labore voluptatibus. Voluptatem officiis fugiat repellat veritatis
-      dolor illo tempora reiciendis.
-    </p>
+    <ul>
+      <li>
+        Please wear your identification badge so that it is visible at all
+        times.
+      </li>
+      <li>
+        With the exception of the marked smoking area, smoking is prohibited in
+        the whole plant. Photographing and filming is strictly forbidden within
+        the complete premises.
+      </li>
+      <li>Please do not touch any machines, tools, or materials.</li>
+      <li>
+        It is forbidden to bring any weapons (including dummies, toys) into the
+        company.
+      </li>
+      <li>
+        Entrance to all areas of the company without the attendance of an HMCZ
+        employee is strictly forbidden.
+      </li>
+      <li>
+        Please be cautious of transport vehicles. The routes are for pedestrians
+        as well as material transport. Please stay on the designated routes.
+      </li>
+      <li>Observe the rules of the EDS protected space.</li>
+      <li>
+        Production areas are monitored by a camera system. Do not leave your
+        group. Stay close to an HMCZ employee and follow his/her instructions.
+      </li>
+      <li>
+        In case of driving in the company grounds, keep to the maximum allowed
+        speed limit of 10 km/h, and do not park outside of reserved parking
+        places.
+      </li>
+      <li>
+        Internal emergency number: 454. In case of an emergency, please call and
+        follow an HMCZ employee.
+      </li>
+    </ul>
   </article>
   <article class="instruction">
-    <h1>By entering this area, you agree to follow the safety instructions</h1>
+    <h2>
+      By entering this area, you agree to follow the safety instructions and
+      consent to the storage of provided data in the HMCZ database.
+    </h2>
     <button class="btn btn-primary" (click)="createVisit()">Agree</button>
   </article>
 </section>
