--- a/src/app/components/key-form/key-form.component.html
+++ b/src/app/components/key-form/key-form.component.html
@@ -5,7 +5,7 @@
     <input type="text" [(ngModel)]="keyRent.keyCode" />
     <input type="text" [(ngModel)]="keyRent.RFID" />
     <div class="row">
-      <button class="btn btn-primary">Continue</button>
+      <button class="btn btn-primary" (click)="createRent()">Rent Key</button>
     </div>
   </article>
 </section>
