--- a/src/app/pages/visits-overview/visits-overview.component.html
+++ b/src/app/pages/visits-overview/visits-overview.component.html
@@ -27,6 +27,7 @@
           <th>Host</th>
           <th>Visit Date</th>
           <th>Visit Status</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <p style="text-align: center; width: 100%" *ngIf="tableData.length === 0">
@@ -40,6 +41,7 @@
           <td>{{ visit.host }}</td>
           <td>{{ visit.visitDate | date }}</td>
           <td>{{ visit.visitStatus }}</td>
+          <td><button class="btn btn-primary" (click)="updateRent(visit,'Finished')">Return</button></td>
         </tr>
       </tbody>
     </table>
