--- a/src/app/pages/visits-overview/visits-overview.component.html
+++ b/src/app/pages/visits-overview/visits-overview.component.html
@@ -16,7 +16,7 @@
         (ngModelChange)="getVisits()"
         [(ngModel)]="filter.toDate"
       />
-      <button (click)="getVisits()">test</button>
+      <button class="btn btn-primary" (click)="getVisits()">Refresh</button>
     </div>
     <table>
       <thead>
