--- a/src/app/pages/key-rental/key-rental.component.html
+++ b/src/app/pages/key-rental/key-rental.component.html
@@ -25,6 +25,7 @@
   <key-form
     [keyRent]="keyRentToSave"
     *ngIf="slide === 3"
+    (slideExported)="handleExportedData($event)"
     (dataExported)="handleNotifStatus($event)"
   ></key-form>
   <stepper [slide]="slide"></stepper>
