--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,18 @@
 <section>
-    <div class="card" [routerLink]="'/visits'">
-        <img src="./assets/scan.jpg" alt="">
-        <span class="card-title">Visitor</span>
-    </div>
-    <div class="card" [routerLink]="'/key-rental'">
-        <img src="./assets/key.jpg" alt="">
-        <span class="card-title">Keys</span>
-    </div>
-    <div class="card" [routerLink]="'/visits-overview'">
-        <img src="./assets/profile.png" alt="">
-        <span class="card-title">Visitors overview</span>
-    </div>
-    <div class="card" [routerLink]="'/key-rentals'">
-        <img src="./assets/key.jpg" alt="">
-        <span class="card-title">Rent overviews</span>
-    </div>
+  <div class="card" [routerLink]="'/visits'">
+    <img src="./assets/scan.jpg" alt="" />
+    <span class="card-title">Visitor</span>
+  </div>
+  <div class="card" [routerLink]="'/key-rental'">
+    <img src="./assets/key.jpg" alt="" />
+    <span class="card-title">Keys</span>
+  </div>
+  <div class="card" [routerLink]="'/visits-overview'">
+    <img src="./assets/profile.png" alt="" />
+    <span class="card-title">Visitors overview</span>
+  </div>
+  <div class="card" [routerLink]="'/key-rentals-overview'">
+    <img src="./assets/key.jpg" alt="" />
+    <span class="card-title">Rent overviews</span>
+  </div>
 </section>
