--- a/src/app/components/dialog-popup/dialog-popup.component.html
+++ b/src/app/components/dialog-popup/dialog-popup.component.html
@@ -1,6 +1,8 @@
 <div class="dialog-window">
   <span class="dialog-title">Updating Record</span>
   <p>Do you really want to update this ?</p>
-  <button class="btn btn-primary gp-1 pd1020">Yes</button
-  ><button class="btn btn-primary gp-1 pd1020">No</button>
+  <button (click)="updateRent()" class="btn btn-primary gp-1 pd1020">Yes</button
+  ><button (click)="closePopup()" class="btn btn-primary gp-1 pd1020">
+    No
+  </button>
 </div>
