--- a/src/app/components/dialog-popup/dialog-popup.component.html
+++ b/src/app/components/dialog-popup/dialog-popup.component.html
@@ -1,7 +1,8 @@
 <div class="dialog-window">
   <span class="dialog-title">Updating Record</span>
   <p>Do you really want to update this ?</p>
-  <button (click)="updateRent()" class="btn btn-primary gp-1 pd1020">Yes</button
+  <button (click)="performAction()" class="btn btn-primary gp-1 pd1020">
+    Yes</button
   ><button (click)="closePopup()" class="btn btn-primary gp-1 pd1020">
     No
   </button>
