--- a/src/app/components/training-slide/training-slide.component.html
+++ b/src/app/components/training-slide/training-slide.component.html
@@ -1,44 +1,7 @@
 <section class="card">
   <article class="instruction training-text">
     <span class="title">Safety Instructions</span>
-    <ul>
-      <li>
-        Please wear your identification badge so that it is visible at all
-        times.
-      </li>
-      <li>
-        With the exception of the marked smoking area, smoking is prohibited in
-        the whole plant. Photographing and filming is strictly forbidden within
-        the complete premises.
-      </li>
-      <li>Please do not touch any machines, tools, or materials.</li>
-      <li>
-        It is forbidden to bring any weapons (including dummies, toys) into the
-        company.
-      </li>
-      <li>
-        Entrance to all areas of the company without the attendance of an HMCZ
-        employee is strictly forbidden.
-      </li>
-      <li>
-        Please be cautious of transport vehicles. The routes are for pedestrians
-        as well as material transport. Please stay on the designated routes.
-      </li>
-      <li>Observe the rules of the EDS protected space.</li>
-      <li>
-        Production areas are monitored by a camera system. Do not leave your
-        group. Stay close to an HMCZ employee and follow his/her instructions.
-      </li>
-      <li>
-        In case of driving in the company grounds, keep to the maximum allowed
-        speed limit of 10 km/h, and do not park outside of reserved parking
-        places.
-      </li>
-      <li>
-        Internal emergency number: 454. In case of an emergency, please call and
-        follow an HMCZ employee.
-      </li>
-    </ul>
+    <p>{{ safetyInstructions }}</p>
   </article>
   <article class="instruction">
     <h2>
