--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,6 +7,10 @@
     <img src="./assets/key.jpg" alt="" />
     <span class="card-title">Keys</span>
   </div>
+  <div class="card" [routerLink]="'/qr-generator'">
+    <img src="./assets/scan.jpg" alt="" />
+    <span class="card-title">QR generator</span>
+  </div>
   <div class="card" [routerLink]="'/visits-overview'">
     <img src="./assets/profile.png" alt="" />
     <span class="card-title">Visitors overview</span>
@@ -14,5 +18,9 @@
   <div class="card" [routerLink]="'/key-rentals-overview'">
     <img src="./assets/key.jpg" alt="" />
     <span class="card-title">Rent overviews</span>
+  </div>
+  <div class="card" [routerLink]="'/settings'">
+    <img src="./assets/key.jpg" alt="" />
+    <span class="card-title">Settings</span>
   </div>
 </section>
