ky admin apge api and routing

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,6 +19,10 @@
     <img src="./assets/key.jpg" alt="" />
     <span class="card-title">Rent overviews</span>
   </div>
+  <div class="card" [routerLink]="'/key-administration'">
+    <img src="./assets/key.jpg" alt="" />
+    <span class="card-title">Key admin</span>
+  </div>
   <div class="card" [routerLink]="'/settings'">
     <img src="./assets/key.jpg" alt="" />
     <span class="card-title">Settings</span>
