--- a/src/app/pages/keys-administration/keys-administration.component.html
+++ b/src/app/pages/keys-administration/keys-administration.component.html
@@ -10,6 +10,7 @@
       />
 
       <button (click)="getKeys()">test</button>
+      <button class="btn btn-primary" (click)="createKeyRecord()">+</button>
     </div>
     <table>
       <thead>
